SubBt/force-app/main/default/objects/Question_Group__c/Question_Group__c.object-meta.xml
<CustomObject>
    <label>Selection Type</label>
    <nameField>
        <label>Selection Type</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Selection Types</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>