SubBt/force-app/main/default/objects/Question_Group__c/fields/Allowance_Available__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Available__c</fullName>
    <inlineHelpText>This is your Customers allowable amount to spend on this option.</inlineHelpText>
    <label>Option Allowance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>