SubBt/force-app/main/default/objects/Question_Group__c/fields/Allowance_Remaining__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Remaining__c</fullName>
    <formula>Allowance_Available__c -  Allowance_Used__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This is remaining amount of the Allowance your Customers has to spend on this option.</inlineHelpText>
    <label>Allowance Remaining</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>