SubBt/force-app/main/default/objects/Question_Group__c/fields/Allowance_Used__c.field-meta.xml
<CustomField>
    <fullName>Allowance_Used__c</fullName>
    <inlineHelpText>This is the amount your Customers has spent on this option.</inlineHelpText>
    <label>Allowance Used</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>