SubBt/force-app/main/default/objects/Question_Group__c/fields/Instructions__c.field-meta.xml
<CustomField>
    <fullName>Instructions__c</fullName>
    <inlineHelpText>This is where you will enter the instructions for the Selection Type.  This will be displayed to your Customer.</inlineHelpText>
    <label>Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>