SubBt/force-app/main/default/objects/Question_Group__c/fields/Is_Saved_Items__c.field-meta.xml
<CustomField>
    <fullName>Is_Saved_Items__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Saved Items</label>
    <type>Checkbox</type>
</CustomField>