SubBt/force-app/main/default/objects/Question_Group__c/fields/of_Options_Required__c.field-meta.xml
<CustomField>
    <fullName>of_Options_Required__c</fullName>
    <label># of Options Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>