SubBt/force-app/main/default/objects/Question_Group__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Type</label>
    <referenceTo>Question_Group__c</referenceTo>
    <relationshipLabel>Selection Types</relationshipLabel>
    <relationshipName>Question_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>