SubBt/force-app/main/default/objects/Question_Group__c/fields/Section__c.field-meta.xml
<CustomField>
    <fullName>Section__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selection Category</label>
    <referenceTo>Section__c</referenceTo>
    <relationshipLabel>Selection Types</relationshipLabel>
    <relationshipName>Question_Groups</relationshipName>
    <type>Lookup</type>
</CustomField>