SubBt/force-app/main/default/objects/Question_Group__c/fields/Selected_By_Name__c.field-meta.xml
<CustomField>
    <fullName>Selected_By_Name__c</fullName>
    <formula>Selected_By__r.FirstName +&apos; &apos; + Selected_By__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selected Name</label>
    <type>Text</type>
</CustomField>