SubBt/force-app/main/default/objects/Question_Group__c/fields/Sort_Id__c.field-meta.xml
<CustomField>
    <fullName>Sort_Id__c</fullName>
    <label>Sort Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>