SubBt/force-app/main/default/objects/Question_Group__c/fields/Temp_Key__c.field-meta.xml
<CustomField>
    <fullName>Temp_Key__c</fullName>
    <label>Temp Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>