SubBt/force-app/main/default/objects/Question_Group__c/fields/Total_Options_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Total_Options_Submitted__c</fullName>
    <label>Total Options Submitted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>