SubBt/force-app/main/default/objects/Question_Group__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Section__c</columns>
    <columns>Title__c</columns>
    <columns>Instructions__c</columns>
    <columns>of_Options_Required__c</columns>
    <columns>Date_Selected__c</columns>
    <columns>Allowance_Available__c</columns>
    <columns>Allowance_Used__c</columns>
    <columns>Allowance_Remaining__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>